# BoxdBuddies

./: .dockerignore  .env.example  .eslintignore  .eslintrc.json  .gitignore  .lintstagedrc  .npmrc  .roo-cline.json  .stylelintrc.json  BRAND_USAGE_POLICY.md  BUILD_TRIGGER.md  CACHE_BEHAVIOR.md  CASE_CONVERSION_SOLUTION.md  CHANGELOG.md  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_TRANSFORMATION_COMPLETE.md  CONTRIBUTING.md  CURRENT_SESSION_STATUS.md  DOCUMENTATION_AUDIT_COMPLETE.md  Dockerfile  Dockerfile.dev  ENHANCED_API_DOCS.md  INSTALL.md  LICENSE  MCP_AUTOMATION_COMPLETE.md  MCP_SETUP_COMPLETE.md  NOTICE  NOTICE_NEW  POST_MERGE_INSTRUCTIONS.md  PROJECT_STATUS.md  PR_CONSOLIDATED_FIXES.md  PR_CONVERSATION_FIXES_SUMMARY.md  PR_WORKFLOW_FIXES.md  PUBLIC_RELEASE_CHECKLIST.md  REACT_PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  RELEASE_NOTES.md  RELEASE_PLAN.md  ROLLOUT_PLAN.md  ROO_CODE_SETUP_GUIDE.md  (+41 more)
.ai-internal/: cleanupreport.md
.codacy/: codacy.yaml  exclusions.yaml
.devcontainer/: README.md  devcontainer.json  mcp-monitor.sh  post-create.sh  setup-with-mcp.sh  setup.sh  start-mcp-servers.sh
.github/: CODEOWNERS  DEPENDENCY_REVIEW_POLICY.md  ci-retrigger.txt  copilot-instructions.md  dependabot.yml  dependency-review-config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/chatmodes/: Custom.chatmode.md
.github/codeql/: codeql-config.yml  python_placeholder.py
.github/instructions/: sonarqube_mcp.instructions.md
.husky/: commit-msg  pre-push
docs/: TAURI_V2_MIGRATION.md  USER_GUIDE.md  ai-attribution-update-guide.md  npm-audit-decision.md  release-2.0.0.md  security-exceptions.md  server-watchlist-cache-design.md  versioning-and-releases.md  versioning-workflow-diagram.md
functions/: README.md
github-rulesets/: BEFORE-AFTER-COMPARISON.md  IMPORT-INSTRUCTIONS.md  README.md  develop-branch-ruleset.json  feature-branch-ruleset.json  main-branch-ruleset.json  release-hotfix-ruleset.json
migrations/: 001_create_tmdb_catalog.sql  002_create_friends_cache.sql  003_create_watchlist_counts_cache.sql  004_create_incremental_sync_tracking.sql
public/: README.md
scripts/: .disabled-extensions.txt  .eslintrc.js  README.md  advanced-clippy-automation.sh  aggressive-clippy-fix.sh  backup.ps1  check-supported-version.cjs  check-supported-version.js  clippy-automation-suite.sh  clippy-fix-phase1.sh  dead-code-scan.ps1  diagnose-database.ps1  emergency-rollback.js  fix-all-77-issues.sh  fix-all-clippy-warnings.sh  fix-clippy-careful.sh  fix-clippy-warnings.sh  intelligent-clippy-loop.sh  mcp-restart.ps1  mcp-restart.sh  mcp-status.ps1  mcp-status.sh  mcp-stop.ps1  mcp-stop.sh  migrate-database.ps1  pages-smoke-test.ps1  reliable-clippy-fix.sh  run-vitest.cjs  run-vitest.js  setup-git-hooks.sh  setup-gpg-signing.sh  setup-gpg.sh  simple-clippy-fix.sh  simple-targeted-fix.sh  sync-favicon.mjs  sync-tmdb-database.ps1  targeted-clippy-fix.sh  test-versioning-workflows.sh  tmdb-sync.ps1  ultimate-clippy-fix.sh
src/: App-clean.tsx  App-web.tsx  App.css  App.tsx  index.css  linux-fixes.css  main-web.tsx  main.tsx  setupTests.ts  styles.css  types.d.ts  types.ts  utils.ts  vite-env.d.ts
src-tauri/: Cargo.toml  clippy_final_check.txt  clippy_output.txt  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/scripts/: advanced-clippy-loop.sh  two-phase-clippy-fix.sh
src-tauri/src/: commands.rs  db.rs  logging.rs  main.rs  main.rs.backup.20250803_015822  main.rs.backup.20250803_020154  main.rs.backup.20250803_021231  main.rs.backup.phase1.20250803_022641  main.rs.backup.reliable.20250803_022436  main.rs.two_phase_backup.20250803_112103  models.rs  net.rs  preferences.rs  scrape.rs  tmdb.rs  tmdb_client.rs
src-tauri/wix/: main.wxs
web/: README.md
(+183 files in other folders)
