[package]
name = "boxdbuddies"
version = "0.1.0"
description = "A Tauri App for managing BoxdBuddies"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "window-request-user-attention", "window-show", "window-set-focus", "window-set-always-on-top", "window-close", "window-set-size", "window-set-position", "window-center", "shell-open", "fs-read-file", "fs-write-file", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
fastrand = "2.0"
scraper = "0.20"
regex = "1.0"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
