[package]
name = "boxdbuddy"
version = "1.0.0"
description = "Compare Letterboxd watchlists between friends to find movies everyone wants to watch"
authors = ["Wootehfook"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/Wootehfook/BoxdBuddies"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
# AI Generated: GitHub Copilot - 2025-08-12
tauri-build = { version = "2", features = [] }

[dependencies]
# AI Generated: GitHub Copilot - 2025-08-12
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
dirs = "6.0"
fastrand = "2.0"
scraper = "0.23"
regex = "1.0"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
